[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://coop/scripts/stats_screen.gd" id="1"]

[node name="StatsScreen" type="CanvasLayer"]
layer = 99
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "CHARACTER STATS"
horizontal_alignment = 1

[node name="CloseHint" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "Press [TAB] to close"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Content" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="PlayerStats" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Content"]
layout_mode = 2

[node name="SectionTitle" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/PlayerStats"]
layout_mode = 2
text = "PLAYER STATS"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/PlayerStats"]
layout_mode = 2

[node name="StatsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/PlayerStats"]
layout_mode = 2
columns = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/PlayerStats/StatsGrid"]
layout_mode = 2
text = "Level:"

[node name="LevelValue" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/PlayerStats/StatsGrid"]
layout_mode = 2
text = "1"

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/PlayerStats/StatsGrid"]
layout_mode = 2
text = "Health:"

[node name="HealthValue" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/PlayerStats/StatsGrid"]
layout_mode = 2
text = "100 / 100"

[node name="XPLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/PlayerStats/StatsGrid"]
layout_mode = 2
text = "XP:"

[node name="XPValue" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/PlayerStats/StatsGrid"]
layout_mode = 2
text = "0 / 100"

[node name="WeaponStats" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Content"]
layout_mode = 2

[node name="SectionTitle" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats"]
layout_mode = 2
text = "WEAPON STATS"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats"]
layout_mode = 2

[node name="StatsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats"]
layout_mode = 2
columns = 2

[node name="DamageLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "Damage:"

[node name="DamageValue" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "15"

[node name="FireRateLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "Fire Rate:"

[node name="FireRateValue" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "2.0 shots/sec"

[node name="MultishotLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "Multishot:"

[node name="MultishotValue" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "1 arrow"

[node name="PierceLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "Pierce:"

[node name="PierceValue" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "0 enemies"

[node name="CritChanceLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "Crit Chance:"

[node name="CritChanceValue" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "0%"

[node name="ArrowSpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "Arrow Speed:"

[node name="ArrowSpeedValue" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "500"

[node name="ExplosionLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "Explosion Chance:"

[node name="ExplosionValue" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "0%"

[node name="LifestealLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "Lifesteal:"

[node name="LifestealValue" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "0 HP"

[node name="HomingLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "Homing:"

[node name="HomingValue" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/WeaponStats/StatsGrid"]
layout_mode = 2
text = "None"

[node name="ActiveUpgrades" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Content"]
layout_mode = 2

[node name="SectionTitle" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/ActiveUpgrades"]
layout_mode = 2
text = "ACTIVE UPGRADES"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/ActiveUpgrades"]
layout_mode = 2

[node name="UpgradesList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/ActiveUpgrades"]
layout_mode = 2

[node name="NoUpgradesLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Content/ActiveUpgrades/UpgradesList"]
layout_mode = 2
text = "No upgrades yet. Level up to unlock upgrades!"
